Grease Pencil Eraser performance drops when guides are enabled #66501

Closed
opened 2019-07-06 12:14:34 +02:00 by artem ivanov · 7 comments

System Information
Operating system: Windows 10 64 Bits
Graphics card: GeForce GTX 1070

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f

Short description of error
Eraser performance drops when using it with pencil guides enabled. Also eraser behaves like its strength is like x10.

Exact steps to reproduce the error

  1. Open attached .blend.
  2. Click and drag eraser from point I to point II.
    You get this:
    image.png
    Thats default eraser with .5 strength.
  3. Now switch to Pencil, enable Guides
    image.png
  4. Switch back to Eraser and click&drag from I to II
    You get different picture and Blender freezes for like 400ms:
    image.png
    Also it looks like the eraser strength is set to something like 10.

grease_pencil_eraser_bug.blend

**System Information** Operating system: Windows 10 64 Bits Graphics card: GeForce GTX 1070 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` **Short description of error** Eraser performance drops when using it with pencil guides enabled. Also eraser behaves like its strength is like x10. **Exact steps to reproduce the error** 1) Open attached .blend. 2) Click and drag eraser from point I to point II. You get this: ![image.png](https://archive.blender.org/developer/F7568932/image.png) Thats default eraser with .5 strength. 3) Now switch to Pencil, enable Guides ![image.png](https://archive.blender.org/developer/F7568935/image.png) 4) Switch back to Eraser and click&drag from I to II You get different picture and Blender freezes for like 400ms: ![image.png](https://archive.blender.org/developer/F7568939/image.png) Also it looks like the eraser strength is set to something like 10. [grease_pencil_eraser_bug.blend](https://archive.blender.org/developer/F7568946/grease_pencil_eraser_bug.blend)
Author

Added subscriber: @ixd

Added subscriber: @ixd

Added subscribers: @CharlieJolly, @antoniov

Added subscribers: @CharlieJolly, @antoniov

@CharlieJolly Could you take a look?

@CharlieJolly Could you take a look?
Charlie Jolly was assigned by Antonio Vazquez 2019-07-06 12:34:51 +02:00

It looks the guides are doing something when the guide is enabled. Maybe you need avoid this code when the eraser is active.

It looks the guides are doing something when the guide is enabled. Maybe you need avoid this code when the eraser is active.
Charlie Jolly was unassigned by Antonio Vazquez 2019-07-06 12:49:13 +02:00
Antonio Vazquez self-assigned this 2019-07-06 12:49:13 +02:00

@CharlieJolly In the test file, there are some delays, but not sure what is happening here...it looks the guides are doing something.

@CharlieJolly In the test file, there are some delays, but not sure what is happening here...it looks the guides are doing something.

This issue was referenced by 741f80864e

This issue was referenced by 741f80864e7932b2249f8e89095a26ee59e1884b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66501
No description provided.