GPencil: Don't add missing events for Eraser mode

This avoid some code that can delay the easer, but still some problems with the test file.

Related to T66501